Fix invoice PDF layout to keep company info right-aligned with or without logo

--- a/invoices/templates/invoices/invoice_pdf.html
+++ b/invoices/templates/invoices/invoice_pdf.html
@@ -26,13 +26,18 @@
         }
 
         .header {
+            position: relative;
             display: flex;
-            justify-content: space-between;
+            justify-content: flex-end;
             align-items: flex-start;
             margin-bottom: 5px;
+            min-height: 6cm;
         }
 
         .company-logo {
+            position: absolute;
+            left: 0;
+            top: 0;
             max-width: 16cm;
             max-height: 6cm;
             margin-left: -15mm;
